docs/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here.
 * 
 * The docusaurus website provide a tool to generate the color palette based on
 * a primary color:
 * https://docusaurus.io/docs/styling-layout#styling-your-site-with-infima
 */

:root {
    --ifm-color-primary: #0969da;
    --ifm-color-primary-dark: #085ec4;
    --ifm-color-primary-darker: #0859b9;
    --ifm-color-primary-darkest: #064999;
    --ifm-color-primary-light: #0a73f0;
    --ifm-color-primary-lighter: #1079f5;
    --ifm-color-primary-lightest: #318cf6;
    --ifm-code-font-size: 95%;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
    --ifm-color-primary: #669fe1;
    --ifm-color-primary-dark: #4b8edc;
    --ifm-color-primary-darker: #3d85d9;
    --ifm-color-primary-darkest: #266dbf;
    --ifm-color-primary-light: #81b0e6;
    --ifm-color-primary-lighter: #8fb9e9;
    --ifm-color-primary-lightest: #b8d2f1;
}

.docusaurus-highlight-code-line {
    background-color: rgba(0, 0, 0, 0.1);
    display: block;
    margin: 0 calc(-1 * var(--ifm-pre-padding));
    padding: 0 var(--ifm-pre-padding);
}

[data-theme='dark'] .docusaurus-highlight-code-line {
    background-color: rgba(0, 0, 0, 0.3);
}

.header-github-link:before {
    background: url("/static/img/GitHub-Mark-32px.png") no-repeat;
    background-size: cover;
    display: flex;
    content: "";
    height: 24px;
    width: 24px;
}

@media screen and (max-width: 996px) {
    .footer {
        text-align: center;
    }
}

a.menu__link:hover {
    text-decoration: underline;
}

/* "hack" to makes the announcement bar bigger since it doesn't have "public" css classes */
div[role=banner] {
    height: 2.3em;
}

div[role=banner] div {
    font-size: 90%;
}

